dnl Process this file with autoconf to produce a configure script.
dnl Adapted from the nice scripts from RoX
AC_INIT(chroot-launch.c)

dnl Checks for programs.
AC_PROG_CC

[
if test "x$GCC" = "xyes"; then
  CFLAGS="$CFLAGS -Wall -Wextra -Werror \
	-Wstrict-prototypes -Wmissing-prototypes \
	-Wcast-qual -Wcast-align -Wpointer-arith \
	-Wwrite-strings -Wconversion \
	-Wnested-externs"
fi
]

dnl Check for static flag
AC_ENABLE(static, static=y, static=n)
AC_SUBST(static)
AC_ENABLE(root, chroot_allow_root=y, chroot_allow_root=n)
AC_SUBST(chroot_allow_root)
AC_ENABLE(clean, chroot_clean_exec=y, chroot_clean_exec=n)
AC_SUBST(chroot_clean_exec)

if test -z "$PKG_CONFIG"; then
  PKG_CONFIG=pkg-config
fi
AC_SUBST(PKG_CONFIG)

AC_MSG_CHECKING(that pkg-config runs)
if "$PKG_CONFIG" --version > /dev/null 2>&1 ; then
  AC_MSG_RESULT(yes)
else
  AC_MSG_RESULT(no)
  AC_MSG_ERROR([*** $PKG_CONFIG missing ***

\'$PKG_CONFIG --version\' failed to run - make sure it is inside one of the
directories in your PATH environment variable!

pkg-config comes with the developement packages for GTK+-2.2, available at:

    http://www.gtk.org])
fi


AC_DEFUN(CLIP_REQUIRE, [
AC_MSG_CHECKING(that $1 (version >= $2) is installed)
if "$PKG_CONFIG" --atleast-version=$2 $1 ; then
  AC_MSG_RESULT(yes)
else
  AC_MSG_RESULT(no)
  if "$PKG_CONFIG" --exists $1 ; then
    AC_MSG_ERROR(Current version is only `"$PKG_CONFIG" "$1" --modversion`)
  else
    AC_MSG_ERROR(Package is not installed)
  fi
fi
])

AC_MSG_CHECKING(for CLIP includes)
if "$PKG_CONFIG" --atleast-version=1.0.0 "clip" ; then
  LDFLAGS="$LDFLAGS `$PKG_CONFIG --libs clip`"
  CFLAGS="$CFLAGS `$PKG_CONFIG --cflags clip`"
  AC_DEFINE(HAVE_GNOME_VFS)
  AC_MSG_RESULT(yes)
else
  AC_MSG_RESULT(no)
fi


dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h signal.h sys/wait.h sys/socket.h sys/un.h)
AC_CHECK_HEADERS(clip/clip.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_UID_T
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_CHECK_FUNCS(chroot signal setsid setuid getpwuid getsockopt)

AC_OUTPUT(Makefile)
